--- a/package.json
+++ b/package.json
@@ -3,22 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 6868",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint:es": "next lint",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js",
+    "ts:lint": "eslint --ext \".ts,.tsx\" --ignore-path .gitignore . && bash -c tsc",
+    "format": "prettier --write .",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test": "jest",
+    "prepare": "husky install",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "framer-motion": "^11.0.8",
+    "lint-staged": "^15.2.2",
+    "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/core": "^7.24.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "eslint-plugin-unicorn": "^51.0.1",
+    "husky": "^9.0.11",
+    "identity-obj-proxy": "^3.0.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "yarn ts:lint"
   }
 }
