--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "framer-motion": "^11.0.8",
     "lint-staged": "^15.2.2",
+    "lodash": "^4.17.21",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-redux-wrapper": "^8.1.0",
